kube/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: api.283.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ytm-api-svc
            port:
              number: 80
  tls:
  - hosts:
    - api.283.kr
    secretName: ytm-api-tls
